--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Sportify</a>
+      <a class="navbar-brand" onClick="window.location = '/';">Sportify</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
