--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,6 +5,7 @@ $(document).ready(function(){
   $("#gameaddress").hide();
   $("#gamesport").hide();
   $("#demo").hide();
+  $("#sportname").hide();
   extraCode();});
 </script>
 
@@ -24,7 +25,11 @@ function initialize() {
     center: latlng
   }
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-    // Try HTML5 geolocation
+}
+
+function currentLocation(){
+  document.getElementById("loading").innerHTML="loading";
+      // Try HTML5 geolocation
   if(navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(function(position) {
       var pos = new google.maps.LatLng(position.coords.latitude,
@@ -33,7 +38,7 @@ function initialize() {
       var infowindow = new google.maps.InfoWindow({
         map: map,
         position: pos,
-        content: 'Location found using HTML5.'
+        content: 'You are here.'
       });
 
       map.setCenter(pos);
@@ -45,9 +50,8 @@ function initialize() {
     // Browser doesn't support Geolocation
     handleNoGeolocation(false);
   }
-
+  document.getElementById("loading").innerHTML="";
 }
-
 
 function extraCode() {
   var x = document.getElementById('gameaddress').innerHTML.split("|");
@@ -150,7 +154,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <div id="panel">
 <center>
       <input id="address" type="textbox" value="San Francisco, CA">
-      <input type="button" class="btn btn-primary" value="Search" onclick="codeAddress()">
+      <input type="button" class="btn btn-default" value="Search" onclick="codeAddress();">
+      <input type="button" class="btn btn-primary" value="Current Location" onclick="currentLocation();">
+      <p id="loading" style="display: inline;"></p>
+
       </center>
 </div>
 
