--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" onClick="window.location = '/';">Sportify</a>
+      <a class="navbar-brand" onClick="window.location = '/';"><img src="/trophy_icon.png" /> Sportify</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active" ><%= link_to 'Add Game', new_game_path %></li>
+        <li class="active" ><%= link_to '+ Add Game', new_game_path %></li>
       </ul>
     </div>
   </div>
