--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="field">
     <%= f.label :sport %><br>
-    <%= f.text_field :sport, :value => 'ex. "Soccer"' %>
+    <%= f.text_field :sport %>
   </div>
   <div class="field">
     <%= f.label :address %><br>
