--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -21,7 +21,7 @@ function initialize() {
   extraCode();
   var latlng = new google.maps.LatLng(37.8717, -122.2728);
   var mapOptions = {
-    zoom: 4,
+    zoom: 14,
     center: latlng
   }
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
@@ -42,7 +42,7 @@ function currentLocation(){
       });
 
       map.setCenter(pos);
-      map.setZoom(10);
+      map.setZoom(14);
     }, function() {
       handleNoGeolocation(true);
     });
@@ -117,7 +117,7 @@ function codeAddress() {
   geocoder.geocode( { 'address': address}, function(results, status) {
     if (status == google.maps.GeocoderStatus.OK) {
       map.setCenter(results[0].geometry.location);
-      map.setZoom(10);
+      map.setZoom(14);
     } else {
       alert('Geocode was not successful for the following reason: ' + status);
     }
@@ -153,7 +153,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <div id="panel">
 <center>
-      <input id="address" type="textbox" value="San Francisco, CA">
+      <input id="address" type="textbox" value="Berkeley, CA">
       <input type="button" class="btn btn-default" value="Search" onclick="codeAddress();">
       <input type="button" class="btn btn-primary" value="Current Location" onclick="currentLocation();">
       <p id="loading" style="display: inline;"></p>
