--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,48 @@
 
+    
+
+    <div id="map-canvas" ></div>
+
+<div id="gameaddress">
+<% @games.each do |game| %>
+  <%= game.address %>|
+
+<% end %>
+</div>
+
+<div id="gamesport">
+<% @games.each do |game| %>
+  <%= link_to game.sport, game %> <br>
+  <%= game.date %> <br>
+  <%= game.stattime.strftime("%I:%M %p") %> - <%= game.endtime.strftime("%I:%M %p") %><br>
+  <% if game.user == current_user %>
+    <%= link_to 'Edit', edit_game_path(game) %> 
+    <%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
+  | 
+
+<% end %>
+</div>
+
+<div id="sportname">
+<% @games.each do |game| %><%= game.sport %>|<% end %>
+</div>
+
+<div id = "latitudes"></div>
+<div id = "longitudes"></div>
+<div id="panel">
+  <center>
+      <input id="address" type="textbox" value="Berkeley, CA">
+      <input type="button" class="btn btn-default" value="Search" onclick="codeAddress();">
+      <input type="button" class="btn btn-primary" value="Current Location" onclick="currentLocation();">
+      <p id="loading" style="display: inline;"></p>
+
+  </center>
+  <div id="loading">
+  </div>
+</div>
+
+
 <script>
 
 $(document).ready(function(){
@@ -6,26 +50,96 @@ $(document).ready(function(){
   $("#gamesport").hide();
   $("#demo").hide();
   $("#sportname").hide();
+  $("#latitudes").hide();
+  $("#longitudes").hide();
   extraCode();});
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+<script src="http://jawj.github.io/OverlappingMarkerSpiderfier/bin/oms.min.js"></script>
+
 <script>
-var geocoder;
+var splitGames = document.getElementById('gameaddress').innerHTML.split("|");
+    var geocoder = new google.maps.Geocoder();
+    for(var x = 0; x < splitGames.length; x++){
+      var address = splitGames[x];
+      geocoder.geocode( { 'address': address}, function(results, status) {
+
+        if (status == google.maps.GeocoderStatus.OK) {
+          var latitude = results[0].geometry.location.lat();
+          var longitude = results[0].geometry.location.lng();
+
+          var cur = document.getElementById("latitudes").innerHTML;
+          cur = cur + latitude + ", ";
+          document.getElementById("latitudes").innerHTML=cur;
+
+          var cur2 = document.getElementById("longitudes").innerHTML;
+          cur2 = cur2 + longitude + ", ";
+          document.getElementById("longitudes").innerHTML=cur2;
+        } 
+      });
+    }
+
 var map;
-var myCenter=new google.maps.LatLng(37.7833,122.4167);
-
 function initialize() {
+  var gm=google.maps;
+    var lats = document.getElementById("latitudes").innerHTML.split(",");
+    var longs = document.getElementById("longitudes").innerHTML.split(",");
+    var descriptions = document.getElementById("gamesport").innerHTML.split("|");
+    var sports = document.getElementById('sportname').innerHTML.split("|");
+      var myLatlng = new google.maps.LatLng(37.8717, -122.2728);
+      var mapOptions = {
+        zoom: 14,
+        center: myLatlng
+      }
+      map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-  geocoder = new google.maps.Geocoder();
-  extraCode();
-  var latlng = new google.maps.LatLng(37.8717, -122.2728);
-  var mapOptions = {
-    zoom: 14,
-    center: latlng
-  }
-  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-}
+      var oms = new OverlappingMarkerSpiderfier(map);
+      var iw = new gm.InfoWindow();
+      oms.addListener('click', function(marker, event) {
+        iw.setContent(marker.desc);
+        iw.open(map, marker);
+      });
+      for (var i = 0; i < lats.length - 1; i ++) {
+        var loc = new gm.LatLng(lats[i], longs[i]);
+        
+        var spo= String(sports[i]).replace(/\s+/, "").toLowerCase();
+        var ic;//ignore this barrage of if-else. It's just the images displayed on the map. 
+        if(spo == "soccer"){
+         ic = "soccer.png";
+        }else if(spo == "basketball"){
+          ic = "basketball.png"
+        }else if(spo == "frisbee" || spo == "ultimate" || spo == "ultimatefrisbee"){
+          ic = "frisbee.png"
+        }else if(spo == "tennis"){
+          ic = "tennis.png"
+        }else if(spo == "volleyball"){
+          ic = "volleyball.png"
+        }else if(spo == "golf"){
+          ic = "golf.png"
+        }else if(spo == "football"){
+          ic = "football.png"  
+        }else if(spo == "baseball"){
+          ic = "baseball.png"
+        }else if(spo == "hockey" || spo =="fieldhockey" || spo == "rollerhockey" || spo == "icehockey"){
+          ic = "hockey.png"
+        }else{
+          ic = "trophy.png";
+        }
+        var title_i = "Click for more details";
+        var desc_i = descriptions[i];
+        
+        var marker = new gm.Marker({
+          position: loc,
+          title: title_i,
+          map: map,
+          icon: ic
+        });
+        marker.desc = desc_i;
+
+        oms.addMarker(marker);  // <-- here
+      }
+    }
 
 function currentLocation(){
   document.getElementById("loading").innerHTML="loading";
@@ -62,13 +176,12 @@ function extraCode() {
       addPin(x[i], y[i], z[i]);
     }
   }
-  
 }
 
 function addPin(address, data, sport) {
   var spo= String(sport).replace(/\s+/, "").toLowerCase()
 
-    var ic;
+    var ic;//ignore this barrage of if-else. It's just the images displayed on the map. 
     if(spo == "soccer"){
      ic = "soccer.png";
     }else if(spo == "basketball"){
@@ -98,6 +211,7 @@ function addPin(address, data, sport) {
             icon: ic
         });
 
+        markers[i] = "hello";
         var infowindow = new google.maps.InfoWindow({
           content: data
           });
@@ -105,6 +219,7 @@ function addPin(address, data, sport) {
         google.maps.event.addListener(marker, 'click', function() {
           infowindow.open(map,marker);
           });
+        oms.addMarker(marker); //code added here 
       } else {
         alert('Geocode was not successful for the following reason: ' + status);
       }
@@ -116,8 +231,8 @@ function codeAddress() {
   var address = document.getElementById('address').value;
   geocoder.geocode( { 'address': address}, function(results, status) {
     if (status == google.maps.GeocoderStatus.OK) {
-      map.setCenter(results[0].geometry.location);
-      map.setZoom(14);
+     map.setCenter(results[0].geometry.location);
+     map.setZoom(14);
     } else {
       alert('Geocode was not successful for the following reason: ' + status);
     }
@@ -125,43 +240,4 @@ function codeAddress() {
 }
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
-    
-
-    <div id="map-canvas" ></div>
-
-<div id="gameaddress">
-<% @games.each do |game| %>
-  <%= game.address %>|
-
-<% end %>
-</div>
-
-<div id="gamesport">
-<% @games.each do |game| %>
-  <%= link_to game.sport, game %> <br>
-  <%= game.date %> <br>
-  <%= game.stattime.strftime("%I:%M %p") %> - <%= game.endtime.strftime("%I:%M %p") %><br>
-  <% if game.user == current_user %>
-    <%= link_to 'Edit', edit_game_path(game) %> 
-    <%= link_to 'Delete', game, method: :delete, data: { confirm: 'Are you sure?' } %>
-  <% end %>
-  | 
-
-<% end %>
-</div>
-
-<div id="sportname">
-<% @games.each do |game| %><%= game.sport %>|<% end %>
-</div>
-
-<div id="panel">
-<center>
-      <input id="address" type="textbox" value="Berkeley, CA">
-      <input type="button" class="btn btn-default" value="Search" onclick="codeAddress();">
-      <input type="button" class="btn btn-primary" value="Current Location" onclick="currentLocation();">
-      <p id="loading" style="display: inline;"></p>
-
-      </center>
-</div>
-
 
