--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -81,7 +81,7 @@ var splitGames = document.getElementById('gameaddress').innerHTML.split("|");
                 Geocode(address);
             }, 200);
         }else{
-          alert('Geocode was not successful for the following reason: ' + status);
+          //alert('Geocode was not successful for the following reason: ' + status);
 
         }
 
