fixed errors w geocoding

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -61,7 +61,7 @@ $(document).ready(function(){
 <script>
 var splitGames = document.getElementById('gameaddress').innerHTML.split("|");
     var geocoder = new google.maps.Geocoder();
-    for(var x = 0; x < splitGames.length; x++){
+    for(var x = 0; x < splitGames.length - 1; x++){
       var address = splitGames[x];
       geocoder.geocode( { 'address': address}, function(results, status) {
 
@@ -76,7 +76,13 @@ var splitGames = document.getElementById('gameaddress').innerHTML.split("|");
           var cur2 = document.getElementById("longitudes").innerHTML;
           cur2 = cur2 + longitude + ", ";
           document.getElementById("longitudes").innerHTML=cur2;
-        } 
+        } else if (status === google.maps.GeocoderStatus.OVER_QUERY_LIMIT) {    
+            setTimeout(function() {
+                Geocode(address);
+            }, 200);
+        } else {
+            alert("Geocode was not successful for the following reason:" + status);
+        }
       });
     }
 
@@ -160,9 +166,12 @@ function currentLocation(){
     }, function() {
       handleNoGeolocation(true);
     });
+  } else if (status === google.maps.GeocoderStatus.OVER_QUERY_LIMIT) {    
+            setTimeout(function() {
+                Geocode(address);
+            }, 200);
   } else {
-    // Browser doesn't support Geolocation
-    handleNoGeolocation(false);
+        //alert("Geocode was not successful for the following reason:" + status);
   }
   document.getElementById("loading").innerHTML="";
 }
@@ -220,9 +229,13 @@ function addPin(address, data, sport) {
           infowindow.open(map,marker);
           });
         oms.addMarker(marker); //code added here 
-      } else {
-        alert('Geocode was not successful for the following reason: ' + status);
-      }
+      } else if (status === google.maps.GeocoderStatus.OVER_QUERY_LIMIT) {    
+            setTimeout(function() {
+                Geocode(address);
+            }, 200);
+        } else {
+            //alert("Geocode was not successful for the following reason:" + status);
+        }
   });
 }
 
